LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.350 $>


[Note: This file does not mention every change made to the NetBSD source tree.
For an exhaustive list, please subscribe to the `source-changes' mailing list,
or see the mailing list archives.  For more information, send a message
containing just the word `help' to `majordomo@NetBSD.org'.]


Changes from NetBSD 2.0 to NetBSD 2.1:
	which(1): Replaced by a C program that only checks the path.
		[christos 20040401]
	heimdal: import version 0.6.1.  [lha 20040402]
	powerpc: implement FP exception handling for OEA processors.
		[matt 20040404]
	file(1): update to 4.09.  [pooka 20040408]
	hp300: Fix a longstanding bug in console attachment functions,
		so that now DIO based framebuffers (mostly used on HP4xx
		machines) can be used as console again. [tsutsui 20040408]
	hp300: Fix some bugs in apci serial which was switched to MI com(4),
		so that now it's actually functional. [tsutsui 20040410]
	setrlimit(2): Add RLIMIT_SBSIZE to limit the socket buffer size.
		[christos 20040417]
	csh(1): Add support for "limit sbsize" to control the
		socket buffer size resource limit.  [christos 20040417]
	ksh(1): Add support for "ulimit -b" to control the
		socket buffer size resource limit.  [christos 20040417]
	sh(1): Add support for "ulimit -b" to control the
		socket buffer size resource limit.  [christos 20040417]
	login.conf(5): Add support for "sbsize" capability to control the
		socket buffer size limit.  [matt 20040418]
	share/mk: Deprecate AINC in favour of AFLAGS.  [lukem 20040418]
	sysinst: use /etc/postinstall to update /etc (etc) instead of just
		saving /etc to /etc/old [dsl 20040418]
	sysctl(8): Add "vfs.generic.fstypes" node to display the currently
		available file system types.  [lukem 20040419]
	locate.conf(5): "ignorefs type" appends to the default list of
		types rather than overriding it.  [lukem 20040419]
	statvfs(2): Eliminate statfs(2) and friends, in preference for